--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -6,3 +6,24 @@
 #sitemap {
 	
 }
+
+.welcome{
+	/*margin-left: 5%;
+	margin-right: 5%;*/
+	width: 100%;
+	text-align: center;
+}
+.main-top{
+	width: 100%;
+	text-align: center;
+	height:300px;
+	background: grey;
+}
+
+.main-middle{
+	width: 100%;
+	text-align: center;
+	height:300px;
+	background: #FAEBD7;
+
+}
