--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,50 @@
-<header id="header">
-</header>
+<div class="Header">
+<div class="row">
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+
+    <ul class="nav navbar-nav">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
+</div>
+
+<div class="row">
+
+	<div class="col-md-3">
+      <div class="logo">
+
+      	  <%= link_to(image_tag("/assets/logo.png", alt: "logo", title: "Home"), "/", class: "navbar-brand" )  %>
+        
+      </div>
+    </div>  
+
+    <div class="col-md-9">
+
+    <div class="container-fluid">
+       <nav class="navbar">
+         
+            
+            <ul class="nav navbar-nav">
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">ABOUT US</a></li>
+              <li><a href="#">LEGISLATION</a></li>
+              <li><a href="#">DOWNLOADS</a></li>
+              <li><a href="#">CAREERS</a></li>
+              <li><a href="#">TENDERS</a></li>
+              <li><a href="#">MEDIA</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">CONTACT</a></li>
+            </ul>
+        
+        </nav>
+       </div>
+ 
+    </div>
+
+</div>
+</div>
