--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,82 @@
-<div id="home">
-	<h1>Pages#home</h1>
-	<p>Find me in app/views/pages/home.html.erb</p>
+
+
+
+<div class="row">
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                      <!-- Indicators -->
+                      <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                      </ol>
+
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner">
+                        <div class="item active">
+                          <img src="<%= asset_path( '1.jpg' ) %>" />
+                    
+                        </div>
+
+                        <div class="item">
+                           <img src="<%= asset_path( '2.jpg' ) %>" />
+                         
+                        </div>
+
+                      </div>
+
+                      <!-- Left and right controls -->
+                      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+    </div>
+    <div class="welcome">
+      <h1> Welcome to the Competition and Consumer Protection Commission </h1>
+    </div>
 </div>
+
+
+<div class="row">
+  <div class="row">
+   <div class="main-top">
+      <div class="col-md-3">
+        <h4>Megers</h4>
+      </div>
+      <div class="col-md-3">
+        <h4>Cartels</h4>
+      </div>
+      <div class="col-md-3">
+        <h4>Consumer Protection</h4>
+      </div>
+      <div class="col-md-3">
+        <h4>Legal & Enforcements</h4>
+      </div>
+   </div>
+  </div> 
+
+  <div class="row">
+    <div class="main-middle">
+     <div class="col-md-4">
+        <h3>Sensitization compaign</h3>
+      </div>
+      <div class="col-md-4">
+        <h3>Events</h3>
+      </div>
+      <div class="col-md-4">
+        <h3>News</h3>
+      </div>
+    </div>
+  </div>  
+
+  <div class="row">
+
+  </div>   
+
+</div>
+
+ 
