--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -11,9 +11,11 @@
     }
   }
 
-.container-fluid{
+.top-layer{
 
-	margin-right: 15%;
+	width: 100%;
+	text-align: center;
+	margin-left: 25%;
 }
 
 .logo{
