--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,13 @@
 <div class="Header">
 <div class="row">
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="top-layer">
 
     <ul class="nav navbar-nav">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">  5678 (Toll Free) or +260 211 232657/222787   </a></li>
+      <li><a href="#"> zcomp@ccpc.org.zm </a></li>
+      <li><a href="#">WEBMAIL </a></li>
+     
     </ul>
   </div>
 </nav>
