--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,20 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.row {
+	margin: 0;
+}
+
+.page-heading {
+	color: white;
+	background: #32CD32;
+	height: 60px;
+	margin: 0;
+	h1 {
+		height: 100%;
+		line-height: 60px;
+		padding-left: 5%;
+		margin: 0;
+	}
+}
