--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,24 +1,61 @@
-.logo img{
-	margin-bottom: 2px;
-}
+.header {
+	/* For the top strip */
+	
+	.mine {
+		background: #32CD32;
+		height: 100%;
+		width: 100%;
+	}
 
-.navbar-nav {
-    width: 100%;
-    text-align: center;
-    > li {
-      float: none;
-      display: inline-block;
-    }
-  }
+	.navbar-inverse {
+		
+		.top-layer {
+			.nav {
+				background: #32CD32;
+				padding-left: 20%;
 
-.top-layer{
+			}
+			.navbar-nav {
+				width: 100%;
+				color: #000;
+				/*margin-top: */
+				text-align: center;
+				li:nth-child(2) {
+					margin: 0 10%;
+				}
+				a {
+					color: #FFF;
+				}
 
-	width: 100%;
-	text-align: center;
-	margin-left: 25%;
-}
+			}
+		}
+	}
 
-.logo{
 
-margin-bottom: 3%;
+	.top-nav {
+		background: black;
+		padding-left:30%;
+
+
+	}
+
+	.col-md-2{
+		height: 100px;
+		padding-left: 2%;
+	}
+
+	.col-md-10 {
+		height: 100px;
+		padding: 25px 0;
+	}
+
+	.navbar {
+		li {
+			a {
+				color: 	#32CD32;
+
+			}
+		}
+	}
+
 }
