--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,6 +3,12 @@
 	
 }
 
+.body {
+margin: 0 auto;
+width: 100%;
+height: 100%;
+}
+
 #sitemap {
 	
 }
@@ -12,7 +18,9 @@
 	margin-right: 5%;*/
 	width: 100%;
 	text-align: center;
+
 }
+
 .main-top{
 	width: 100%;
 	text-align: center;
@@ -27,3 +35,63 @@
 	background: #FAEBD7;
 
 }
+
+h1 {
+    text-shadow: 2px 2px #ff0000;
+}
+
+.carousel-inner img {
+	width: 100%;
+}
+
+.example1 {
+	height: 50px;	
+	overflow: hidden;
+	position: relative;
+}
+
+.example1 h5 {
+	font-size: 2.2em;
+	color: limegreen;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	line-height: 50px;
+	text-align: center;
+	/* Starting position */
+	-moz-transform:translateX(100%);
+	-webkit-transform:translateX(100%);	
+	transform:translateX(100%);
+	/* Apply animation to this element */	
+	-moz-animation: example1 13s linear infinite;
+	-webkit-animation: example1 13s linear infinite;
+	animation: example1 13s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes example1 {
+	0%   {
+			 -moz-transform: translateX(100%);
+		 }
+
+	100% { 
+		     -moz-transform: translateX(-100%);
+		 }
+}
+@-webkit-keyframes example1 {
+ 0%   { -webkit-transform: translateX(100%); }
+ 100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes example1 {
+ 0%   { 
+ -moz-transform: translateX(100%); /* Firefox bug fix */
+ -webkit-transform: translateX(100%); /* Firefox bug fix */
+ transform: translateX(100%); 		
+ }
+ 100% { 
+ -moz-transform: translateX(-100%); /* Firefox bug fix */
+ -webkit-transform: translateX(-100%); /* Firefox bug fix */
+ transform: translateX(-100%); 
+ }
+}
+
