--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,50 +3,33 @@
     <div class="footer" id="footer">
         <div class="container">
             <div class="row">
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                <div class="col-md-3 col-xs-6">
                     <h5> About CCPT </h5>
-                    <ul>
-                        <li> <a href="#"> link </a> </li>
-                        <li> <a href="#"> link</a> </li>
-                        <li> <a href="#"> link</a> </li>
+                    <p class="Intro"> The Competition and Consumer Protection Tribunal (CCPT) hears any appeal made to it under the Competition and Consumer Protection Act, No. 24 of 2010 and performs such actions as assigned to it under the Act or any other law.</p>
+
+                    <ul class="cities">
+                        <li> <a href="#"><span>&#8226; Lusaka </a></span></li>
+                        <li> <a href="#"><span>&#8226; Kitwe </span></a></li>
+                        <li> <a href="#"><span>&#8226; Chipata </span></a></li>
+                        <li> <a href="#"><span>&#8226; Solwezi</a></span></li>
+                        <li> <a href="#"><span>&#8226; Mongu </a></span></li>
+                        <li> <a href="#"><span>&#8226; Kasama </a></span></li>
+                        <li> <a href="#"><span>&#8226; Chinsali</a></span></li>
+                        <li> <a href="#"><span>&#8226; Mansa </a></span></li>
+                        <li> <a href="#"><span>&#8226; Kabwe </a></span></li>
+                        <li> <a href="#"><span>&#8226; Livingstone</a></span></li>
+                       
                     </ul>
                 </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                <div class="col-md-3 col-xs-6">
                     <h5> Get in Touch</h5>
-                    <ul>
-                        <li> <a href="#"> link</a> </li>
-                        <li> <a href="#"> link </a> </li>
-                        <li> <a href="#"> link </a> </li>
-                    </ul>
+                    <p class="Intro"> The Tribunal Secretariate is located on the 9th Floor, New Government Complex Building, sharing the same floor with the Ministry of Commerce, Trade and Industry. Further, you may wish to contact the Head of the Competition and Consumer Protection Tribunal Secretariate using the following contacts: <br>
+                    +260-211-228303/4 or email Kelvin.Kamayoyo@mcti.gov.zm.
+
+                    </p>
                 </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                <div class="col-md-3 ">
                     <h5> Connect With Us </h5>
-                    <ul>
-                        <li> <a href="#"> link</a> </li>
-                        <li> <a href="#"> link</a> </li>
-                        <li> <a href="#"> link</a> </li>
-                        
-                    </ul>
-                </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h5> Related links </h5>
-                    <ul>
-                        <li> <a href="#"> link</a> </li>
-                        <li> <a href="#"> link </a> </li>
-                        <li> <a href="#"> link </a> </li>
-                
-                    </ul>
-                </div>
-                <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-                    <h5> Email Us </h5>
-                    <ul>
-                        <li>
-                            <div class="input-append newsletter-box text-center">
-                                <input type="text" class="full text-center" placeholder="Email ">
-                                <button class="btn  bg-gray" type="button"> Write us <i class="fa fa-long-arrow-right"> </i> </button>
-                            </div>
-                        </li>
-                    </ul>
                     <ul class="social">
                         <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
                         <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
@@ -55,6 +38,20 @@
                         <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
                     </ul>
                 </div>
+                <div class="col-md-3 ">
+                    <h5> Related links </h5>
+                    <ul>
+                        <li> <a href="http://www.mcti.gov.zm/"> → Ministry of Commerce</a> </li>
+                        <li> <a href="#"> → Comesa Competition Comission </a> </li>
+                        <li> <a href="http://www.erb.org.zm/viewpage.php?page=news"> → Energy Regulation Board </a> </li>
+                        <li> <a href="#"> → International Competition Network</a> </li>
+                        <li> <a href="#"> → Zambia Beureu of Standards </a> </li>
+                        <li> <a href="#"> → ZICTA</a> </li>
+                        <li> <a href="https://www.ccpc.org.zm/" target="blank"> → CCPC</a> </li>
+                
+                    </ul>
+                </div>
+                
             </div>
             <!--/.row--> 
         </div>
