--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,16 +13,20 @@
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-        <div class="item active">
-          <img src="<%= asset_path( '1.jpg' ) %>" />
+          <div class="item active">
+            <img src="<%= asset_path( 'b1.jpg' ) %>" />
 
-        </div>
+          </div>
 
-        <div class="item">
-           <img src="<%= asset_path( '2.jpg' ) %>" />
-         
-        </div>
+          <div class="item">
+             <img src="<%= asset_path( 'b2.jpg' ) %>" />
+           
+          </div>
 
+          <div class="item">
+             <img src="<%= asset_path( 'b3.jpg' ) %>" />
+           
+          </div>
         </div>
 
         <!-- Left and right controls -->
@@ -36,7 +40,7 @@
         </a>
     </div>
     <div class="welcome">
-      <h1> Welcome to the Competition and Consumer Protection Commission </h1>
+      <h1 > <font color=" #FFA500">Welcome to the Competition and Consumer Protection Tribunal</font> </h1>
     </div>
 </div>
 
@@ -44,6 +48,9 @@
 <div class="row">
   <div class="row">
    <div class="main-top">
+        <div class="example1">
+          <h5> The&nbsp;Competition&nbsp;and&nbsp;Consumer&nbsp;Protection&nbsp;Act&nbsp;&#8470;&nbsp;24&nbsp;of&nbsp;2010 </h5>
+        </div>
       <div class="col-md-3">
         <h4>Megers</h4>
       </div>
