--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -64,10 +64,10 @@
             <p class="pull-left"> Competition and consumer protection tribunal. All right reserved. </p>
             <div class="pull-right">
                 <ul class="nav nav-pills payments">
-                	<li>Home |</li>
-                    <li>Blog |</li>
-                    <li>Contact |</li>
-                    <li>FAQ</li>
+                	<li><%= link_to "Home", root_path %></li>
+                    <li><%= link_to "Blog", root_path %></li>
+                    <li><%= link_to "Contact", new_contact_path %></li>
+                    <li><%= link_to "Faq", fa_questions_path  %></li>
                 </ul> 
             </div>
         </div>
